Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL void X3DCALL xSetEffectMatrixWithElements(Handle entity, const char * name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44, int layer = -1);
X3DDECL void X3DCALL xSetEffectMatrix(Handle entity, const char * name, Handle matrix, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectMatrix(Handle surface, const char * name, Handle matrix, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectMatrixWithElements(Handle surface, const char * name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44, int layer = -1);
X3DDECL void X3DCALL xSetEffectEntityTexture(Handle entity, const char * name, int index = 0, int layer = -1);
X3DDECL void X3DCALL xSetEffectTexture(Handle entity, const char * name, Handle texture, int frame = 0, int layer = -1, int isRecursive = 1);
X3DDECL void X3DCALL xSurfaceEffectTexture(Handle surface, const char * name, Handle texture, int frame = 0, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectMatrixSemantic(Handle surface, const char * name, int value, int layer = -1);
X3DDECL void X3DCALL xSetEffectMatrixSemantic(Handle entity, const char * name, int value, int layer = -1);
X3DDECL void X3DCALL xDeleteSurfaceConstant(Handle surface, const char * name, int layer = -1);
X3DDECL void X3DCALL xDeleteEffectConstant(Handle entity, const char * name, int layer = -1);
X3DDECL void X3DCALL xClearSurfaceConstants(Handle surface, int layer = -1);
X3DDECL void X3DCALL xClearEffectConstants(Handle entity, int layer = -1);
X3DDECL void X3DCALL xSetEffectTechnique(Handle entity, const char * name, int layer = -1);
X3DDECL void X3DCALL xSurfaceTechnique(Handle surface, const char * name, int layer = -1);
X3DDECL int X3DCALL xValidateEffectTechnique(Handle effect, const char * name);
X3DDECL void X3DCALL xSetEntityShaderLayer(Handle entity, int layer);
X3DDECL int X3DCALL xGetEntityShaderLayer(Handle entity);
X3DDECL void X3DCALL xSetSurfaceShaderLayer(Handle surface, int layer);
X3DDECL int X3DCALL xGetSurfaceShaderLayer(Handle surface);