Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	[DllImport("xors3d.dll", EntryPoint = "xSetEffectMatrixWithElements")]
	public static extern void SetEffectMatrixWithElements_(int entity, StringBuilder name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44, int layer);
	public static void SetEffectMatrixWithElements(int entity, string name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44, int layer)
	{
		SetEffectMatrixWithElements_(entity, new StringBuilder(name), m11, m12, m13, m14, m21, m22, m23, m24, m31, m32, m33, m34, m41, m42, m43, m44, layer);
	}
	public static void SetEffectMatrixWithElements(int entity, string name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44)
	{
		 SetEffectMatrixWithElements(entity, name, m11, m12, m13, m14, m21, m22, m23, m24, m31, m32, m33, m34, m41, m42, m43, m44, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectMatrix")]
	public static extern void SetEffectMatrix_(int entity, StringBuilder name, int matrix, int layer);
	public static void SetEffectMatrix(int entity, string name, int matrix, int layer)
	{
		SetEffectMatrix_(entity, new StringBuilder(name), matrix, layer);
	}
	public static void SetEffectMatrix(int entity, string name, int matrix)
	{
		 SetEffectMatrix(entity, name, matrix, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectMatrix")]
	public static extern void SurfaceEffectMatrix_(int surface, StringBuilder name, int matrix, int layer);
	public static void SurfaceEffectMatrix(int surface, string name, int matrix, int layer)
	{
		SurfaceEffectMatrix_(surface, new StringBuilder(name), matrix, layer);
	}
	public static void SurfaceEffectMatrix(int surface, string name, int matrix)
	{
		 SurfaceEffectMatrix(surface, name, matrix, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectMatrixWithElements")]
	public static extern void SurfaceEffectMatrixWithElements_(int surface, StringBuilder name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44, int layer);
	public static void SurfaceEffectMatrixWithElements(int surface, string name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44, int layer)
	{
		SurfaceEffectMatrixWithElements_(surface, new StringBuilder(name), m11, m12, m13, m14, m21, m22, m23, m24, m31, m32, m33, m34, m41, m42, m43, m44, layer);
	}
	public static void SurfaceEffectMatrixWithElements(int surface, string name, float m11, float m12, float m13, float m14, float m21, float m22, float m23, float m24, float m31, float m32, float m33, float m34, float m41, float m42, float m43, float m44)
	{
		 SurfaceEffectMatrixWithElements(surface, name, m11, m12, m13, m14, m21, m22, m23, m24, m31, m32, m33, m34, m41, m42, m43, m44, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectEntityTexture")]
	public static extern void SetEffectEntityTexture_(int entity, StringBuilder name, int index, int layer);
	public static void SetEffectEntityTexture(int entity, string name, int index, int layer)
	{
		SetEffectEntityTexture_(entity, new StringBuilder(name), index, layer);
	}
	public static void SetEffectEntityTexture(int entity, string name, int index)
	{
		 SetEffectEntityTexture(entity, name, index, -1);
	}
	public static void SetEffectEntityTexture(int entity, string name)
	{
		 SetEffectEntityTexture(entity, name, 0, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectTexture")]
	public static extern void SetEffectTexture_(int entity, StringBuilder name, int texture, int frame, int layer, int isRecursive);
	public static void SetEffectTexture(int entity, string name, int texture, int frame, int layer, int isRecursive)
	{
		SetEffectTexture_(entity, new StringBuilder(name), texture, frame, layer, isRecursive);
	}
	public static void SetEffectTexture(int entity, string name, int texture, int frame, int layer)
	{
		 SetEffectTexture(entity, name, texture, frame, layer, 1);
	}
	public static void SetEffectTexture(int entity, string name, int texture, int frame)
	{
		 SetEffectTexture(entity, name, texture, frame, -1, 1);
	}
	public static void SetEffectTexture(int entity, string name, int texture)
	{
		 SetEffectTexture(entity, name, texture, 0, -1, 1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectTexture")]
	public static extern void SurfaceEffectTexture_(int surface, StringBuilder name, int texture, int frame, int layer);
	public static void SurfaceEffectTexture(int surface, string name, int texture, int frame, int layer)
	{
		SurfaceEffectTexture_(surface, new StringBuilder(name), texture, frame, layer);
	}
	public static void SurfaceEffectTexture(int surface, string name, int texture, int frame)
	{
		 SurfaceEffectTexture(surface, name, texture, frame, -1);
	}
	public static void SurfaceEffectTexture(int surface, string name, int texture)
	{
		 SurfaceEffectTexture(surface, name, texture, 0, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectMatrixSemantic")]
	public static extern void SurfaceEffectMatrixSemantic_(int surface, StringBuilder name, int value, int layer);
	public static void SurfaceEffectMatrixSemantic(int surface, string name, int value, int layer)
	{
		SurfaceEffectMatrixSemantic_(surface, new StringBuilder(name), value, layer);
	}
	public static void SurfaceEffectMatrixSemantic(int surface, string name, int value)
	{
		 SurfaceEffectMatrixSemantic(surface, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectMatrixSemantic")]
	public static extern void SetEffectMatrixSemantic_(int entity, StringBuilder name, int value, int layer);
	public static void SetEffectMatrixSemantic(int entity, string name, int value, int layer)
	{
		SetEffectMatrixSemantic_(entity, new StringBuilder(name), value, layer);
	}
	public static void SetEffectMatrixSemantic(int entity, string name, int value)
	{
		 SetEffectMatrixSemantic(entity, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xDeleteSurfaceConstant")]
	public static extern void DeleteSurfaceConstant_(int surface, StringBuilder name, int layer);
	public static void DeleteSurfaceConstant(int surface, string name, int layer)
	{
		DeleteSurfaceConstant_(surface, new StringBuilder(name), layer);
	}
	public static void DeleteSurfaceConstant(int surface, string name)
	{
		 DeleteSurfaceConstant(surface, name, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xDeleteEffectConstant")]
	public static extern void DeleteEffectConstant_(int entity, StringBuilder name, int layer);
	public static void DeleteEffectConstant(int entity, string name, int layer)
	{
		DeleteEffectConstant_(entity, new StringBuilder(name), layer);
	}
	public static void DeleteEffectConstant(int entity, string name)
	{
		 DeleteEffectConstant(entity, name, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xClearSurfaceConstants")]
	public static extern void ClearSurfaceConstants(int surface, int layer);

	public static void ClearSurfaceConstants(int surface)
	{
		 ClearSurfaceConstants(surface, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xClearEffectConstants")]
	public static extern void ClearEffectConstants(int entity, int layer);

	public static void ClearEffectConstants(int entity)
	{
		 ClearEffectConstants(entity, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectTechnique")]
	public static extern void SetEffectTechnique_(int entity, StringBuilder name, int layer);
	public static void SetEffectTechnique(int entity, string name, int layer)
	{
		SetEffectTechnique_(entity, new StringBuilder(name), layer);
	}
	public static void SetEffectTechnique(int entity, string name)
	{
		 SetEffectTechnique(entity, name, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceTechnique")]
	public static extern void SurfaceTechnique_(int surface, StringBuilder name, int layer);
	public static void SurfaceTechnique(int surface, string name, int layer)
	{
		SurfaceTechnique_(surface, new StringBuilder(name), layer);
	}
	public static void SurfaceTechnique(int surface, string name)
	{
		 SurfaceTechnique(surface, name, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xValidateEffectTechnique")]
	public static extern int ValidateEffectTechnique_(int effect, StringBuilder name);
	public static int ValidateEffectTechnique(int effect, string name)
	{
		return ValidateEffectTechnique_(effect, new StringBuilder(name));
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEntityShaderLayer")]
	public static extern void SetEntityShaderLayer(int entity, int layer);

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityShaderLayer")]
	public static extern int GetEntityShaderLayer(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xSetSurfaceShaderLayer")]
	public static extern void SetSurfaceShaderLayer(int surface, int layer);

	[DllImport("xors3d.dll", EntryPoint = "xGetSurfaceShaderLayer")]
	public static extern int GetSurfaceShaderLayer(int surface);
